--- a/Fsing/FrobeniusThresholdsPaper/MainBib.bib
+++ b/Fsing/FrobeniusThresholdsPaper/MainBib.bib
@@ -8,16 +8,19 @@
 \hskip-1\wd7\penalty 10000\box7} "
 }
 
-@unpublished{hernandez+etal.frobenius_powers,
-  Title                    = {Frobenius powers},
-  Author                   = {Hern\'andez, D. J. AND Teixeira, P. AND Witt, E. E.},
-  Note                     = {preprint, \href{https://arxiv.org/abs/1802.02705}{arXiv:1802.02705 [math.AC]}},
-  Year                     = {2018},
-
-  Fauthor                  = {Hern\'andez, Daniel J. AND Teixeira, Pedro AND Witt, Emily E.},
-  Url                      = {https://arxiv.org/abs/1802.02705}
+@Article{hernandez+etal.frobenius_powers,
+  author    = {Hern\'andez, D. J. AND Teixeira, P. AND Witt, E. E.},
+  title     = {Frobenius powers},
+  journal   = {Math.\ Z.},
+  year      = {2019},
+  pages     = {1--32},
+  fauthor   = {Hern\'andez, Daniel J. AND Teixeira, Pedro AND Witt, Emily E.},
+  file      = {:home/pedro/Documents/Work/Research/Papers/Teixeira/frobenius_powers.pdf:PDF},
+  fjournal  = {Mathematische Zeitschrift},
+  keywords  = {poschar, Fsing, FT, FPT, research},
+  owner     = {pedro},
+  publisher = {Springer},
 }
-
  @misc{MultiplierIdealsPackage,
        title = {{MultiplierIdeals: A \emph{Macaulay2} package. Version~1.1}},
        author = {Zach Teitler and Bart Snapp and Claudiu Raicu},
@@ -53,7 +56,7 @@
       }
 
 
-@unpublished{TestIdealsPaper,
+@article{TestIdealsPaper,
   author = {Boix, A. F. AND Hern\'andez, D. J. AND Kadyrsizova, Z. AND Katzman, M. AND Malec, S. AND Mastroeni, M. AND Mostafazadeh\-fard, M. AND Robinson, M. AND Schwede, K. AND Smolkin, D. AND Teixeira, P. AND Witt, E. E.},
   title = {{The \emph{TestIdeals} package for \emph{Macaulay2}}},
  JOURNAL = {J. Softw. Algebra Geom.},
