Updated responses to referees

--- a/Fsing/FrobeniusThresholdsPaper/response_to_report_M_on_v2.tex
+++ b/Fsing/FrobeniusThresholdsPaper/response_to_report_M_on_v2.tex
@@ -85,8 +85,8 @@
 \author{Daniel J.\ Hern\'andez,  Karl Schwede, Pedro Teixeira, and Emily E.\ Witt}
 \maketitle
 
-\begin{enumerate}
-   \item We updated Zhibek Kadyrsizova's website, and removed the link to Erin Bela's website, as she does not seem to habve one at the moment.
-\end{enumerate}
+We thank the referee for carefully checking the package, paper, and documentation. 
+We have updated Zhibek Kadyrsizova's website, and removed the link to Erin Bela's website, as she does not seem to have one at the moment.
+Finally, we appreciate the heads up on the $\nu$'s not printing correctly, and will keep an eye on it when we examine proofs.
 
 \end{document}
