--- a/Fsing/FrobeniusThresholdsPaper/response_to_report_M_on_v2.tex
+++ b/Fsing/FrobeniusThresholdsPaper/response_to_report_M_on_v2.tex
@@ -87,6 +87,6 @@
 
 We thank the referee for carefully checking the package, paper, and documentation. 
 We have updated Zhibek Kadyrsizova's website, and removed the link to Erin Bela's website, as she does not seem to have one at the moment.
-Finally, we appreciate the heads up on the $\nu$'s not printing correctly, and will keep an eye on it when we examine proofs.
+Finally, we appreciate the heads up on the $\nu$'s not printing correctly, and will definitely keep an eye out for it when we examine proofs.
 
 \end{document}
